WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185452
InPlaceAbstractState::beginBasicBlock shouldn't copy all m_variables every time
https://bugs.webkit.org/show_bug.cgi?id=185452
Summary
InPlaceAbstractState::beginBasicBlock shouldn't copy all m_variables every time
Filip Pizlo
Reported
2018-05-08 16:11:48 PDT
Patch forthcoming.
Attachments
possible patch
(12.54 KB, patch)
2018-05-09 12:50 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
patch that might pass tests
(14.03 KB, patch)
2018-05-09 16:30 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
rebased patch with changelog
(16.64 KB, patch)
2018-05-09 16:35 PDT
,
Filip Pizlo
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews206 for win-future
(12.73 MB, application/zip)
2018-05-09 19:09 PDT
,
EWS Watchlist
no flags
Details
the patch
(16.71 KB, patch)
2018-05-10 10:49 PDT
,
Filip Pizlo
msaboff
: review+
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
what the heck, let's try ews again
(16.71 KB, patch)
2018-05-10 13:27 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2018-05-09 12:50:43 PDT
Created
attachment 340009
[details]
possible patch
Filip Pizlo
Comment 2
2018-05-09 16:30:00 PDT
Created
attachment 340048
[details]
patch that might pass tests
Filip Pizlo
Comment 3
2018-05-09 16:35:20 PDT
Created
attachment 340050
[details]
rebased patch with changelog
EWS Watchlist
Comment 4
2018-05-09 19:09:33 PDT
Comment on
attachment 340050
[details]
rebased patch with changelog
Attachment 340050
[details]
did not pass win-ews (win): Output:
http://webkit-queues.webkit.org/results/7631247
New failing tests: http/tests/security/contentSecurityPolicy/userAgentShadowDOM/allow-video.html http/tests/security/contentSecurityPolicy/userAgentShadowDOM/allow-audio.html
EWS Watchlist
Comment 5
2018-05-09 19:09:45 PDT
Created
attachment 340061
[details]
Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Filip Pizlo
Comment 6
2018-05-10 10:49:41 PDT
Created
attachment 340103
[details]
the patch
Michael Saboff
Comment 7
2018-05-10 11:39:33 PDT
Comment on
attachment 340103
[details]
the patch r=me
Filip Pizlo
Comment 8
2018-05-10 11:46:28 PDT
The jsc ews bot saw a failure. I didn't see any failures running locally. I'll rerun tests locally anyway, to see if this is real.
EWS Watchlist
Comment 9
2018-05-10 12:26:58 PDT
Comment on
attachment 340103
[details]
the patch
Attachment 340103
[details]
did not pass jsc-ews (mac): Output:
http://webkit-queues.webkit.org/results/7640853
New failing tests: stress/ftl-put-by-id-setter-exception-interesting-live-state.js.dfg-eager-no-cjit-validate apiTests
Filip Pizlo
Comment 10
2018-05-10 13:26:26 PDT
(In reply to Build Bot from
comment #9
)
> Comment on
attachment 340103
[details]
> the patch > >
Attachment 340103
[details]
did not pass jsc-ews (mac): > Output:
http://webkit-queues.webkit.org/results/7640853
> > New failing tests: > stress/ftl-put-by-id-setter-exception-interesting-live-state.js.dfg-eager-no- > cjit-validate > apiTests
It's very strange to see this failure. I don't think it's related. For example, it didn't happen on the earlier version of this patch, which was identical except for the changelog. Also, I cannot get this failure on my system. I tried twice. So, I think I will land.
Filip Pizlo
Comment 11
2018-05-10 13:27:14 PDT
Created
attachment 340121
[details]
what the heck, let's try ews again
Saam Barati
Comment 12
2018-05-10 13:41:06 PDT
(In reply to Filip Pizlo from
comment #10
)
> (In reply to Build Bot from
comment #9
) > > Comment on
attachment 340103
[details]
> > the patch > > > >
Attachment 340103
[details]
did not pass jsc-ews (mac): > > Output:
http://webkit-queues.webkit.org/results/7640853
> > > > New failing tests: > > stress/ftl-put-by-id-setter-exception-interesting-live-state.js.dfg-eager-no- > > cjit-validate > > apiTests > > It's very strange to see this failure. I don't think it's related. For > example, it didn't happen on the earlier version of this patch, which was > identical except for the changelog. Also, I cannot get this failure on my > system. I tried twice. > > So, I think I will land.
Yeah this isn't your patch. It's one of our sporadic (probably GC caused) failures:
https://bugs.webkit.org/show_bug.cgi?id=183266
Filip Pizlo
Comment 13
2018-05-10 14:32:05 PDT
Landed in
https://trac.webkit.org/changeset/231660/webkit
Radar WebKit Bug Importer
Comment 14
2018-05-10 14:34:10 PDT
<
rdar://problem/40142026
>
Yusuke Suzuki
Comment 15
2018-05-30 03:32:04 PDT
This also shows slight improvement in Octane/zlib :)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug